Add code clarity.

--- a/templates/render_flows.html
+++ b/templates/render_flows.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Topology</title>
+    <title>View Flow Entries</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/render_flows.css') }}">
 </head>
 
@@ -17,7 +17,7 @@
 </div>
 
 <body>
-<b>Flows</b>
+<b>Flow Entries</b>
 
 <table>
     <tr>
