--- a/templates/view_flows.html
+++ b/templates/view_flows.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flows</title>
+    <title>View Flow Entries</title>
 </head>
 
 <div class="topnav">
@@ -16,14 +16,8 @@
 </div>
 <body>
 
-<b>Flows</b>
+<b>View Flow Entries</b>
 <br><br>
-<!-- <select name="cars" id="cars">
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
-    <option value="opel">Opel</option>
-    <option value="audi">Audi</option>
-  </select> -->
 
 <form method="POST" action="{{ url_for('render_flows') }}">
 <label for="switch_id">Choose a switch:</label>
@@ -38,18 +32,5 @@
 
 <br><br>
 
-<!-- <input type="submit" value="Submit">
-<div class="switch_list">
-    <p>Value from the list:</p>
-    <p>Available switches</p>
-    <ul class="switch_list">
-    {% for switch in switches %}
-        <li class="collection-item">{{ switch }}</a></li>
-    {% endfor %}
-    </ul>
-</div> -->
-<!-- 
-<br>
-<button name="submit_flowview_switch" type="submit" onclick="view_flow()">Submit</button> -->
 </body>
 </html>
