Bugfix: Grey out switch ID

--- a/templates/add_flowentry.html
+++ b/templates/add_flowentry.html
@@ -21,8 +21,8 @@
 <br><br>
 
   <form >
-    <label for="switch_id" disabled="disabled" placeholder="{{switch_id}}">Switch ID:</label>
-    <input type="text" id="switch_id" name="switch_id"><br><br>
+    <label for="switch_id">Switch ID:</label>
+    <input type="text" id="switch_id" name="switch_id" disabled="disabled" placeholder="{{ switch_id }}"><br><br>
     <label for="cookie">Cookie:</label>
     <input type="text" id="cookie" name="cookie"><br><br>
     <label for="priority">Priority:</label>
