Add nav panel style

--- a/templates/flow_addremove_switch_select.html
+++ b/templates/flow_addremove_switch_select.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add/Remove Flow Entries</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
 </head>
 
 <div class="topnav">
