--- a/templates/add_flowentry_status.html
+++ b/templates/add_flowentry_status.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Flow Entry Status</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
 </head>
 
 <div class="topnav">
