--- a/templates/render_flows.html
+++ b/templates/render_flows.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>View Flow Entries</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/render_flows.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
 </head>
 
 <div class="topnav">
