--- a/templates/view_flows.html
+++ b/templates/view_flows.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>View Flow Entries</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
 </head>
 
 <div class="topnav">
