--- a/static/styles/render_flows.css
+++ b/static/styles/render_flows.css
@@ -4,11 +4,19 @@ table {
     width: 100%;
   }
   
+th {
+    z-index: 1;
+    top: 0;
+    background:Gray;
+}
+
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
 }
+
+
   
 tr:nth-child(even) {
     background-color: #dddddd;
