--- a/templates/topology.html
+++ b/templates/topology.html
@@ -21,6 +21,11 @@
 <br><br>
 <b>Topology</b>
 <br>
+<form method="POST" action="{{ url_for('topology') }}"></form>
+<input type="reset" value="REFRESH">
+</form>
+
+<br>
 <img src="/static/images/{{ topology }}" alt="Topology">
 
 </body>
