Add packet count and output port / action

--- a/templates/remove_flowentry.html
+++ b/templates/remove_flowentry.html
@@ -26,8 +26,10 @@
         <th style="position: sticky; top: 0; z-index: 1;">Cookie</th>
         <th style="position: sticky; top: 0; z-index: 1;">Priority</th>
         <th style="position: sticky; top: 0; z-index: 1;">Match</th>
-        <th style="position: sticky; top: 0; z-index: 1;">Idle Timeout:</th>
-        <th style="position: sticky; top: 0; z-index: 1;">Hard Timeout:</th>
+        <th style="position: sticky; top: 0; z-index: 1;">Idle Timeout</th>
+        <th style="position: sticky; top: 0; z-index: 1;">Hard Timeout</th>
+        <th style="position: sticky; top: 0; z-index: 1;">Output Port / Action</th>
+        <th style="position: sticky; top: 0; z-index: 1;">Packet Count</th>
       </tr>
     {%for flow in flows%}
        <tr>
