--- a/templates/render_flows.html
+++ b/templates/render_flows.html
@@ -27,8 +27,10 @@
         <th>Cookie</th>
         <th>Priority</th>
         <th>Match</th>
-        <th>Idle Timeout:</th>
-        <th>Hard Timeout:</th>
+        <th>Idle Timeout</th>
+        <th>Hard Timeout</th>
+        <th>Output Port / Action</th>
+        <th>Packet Count</th>
       </tr>
     {%for flow in flows%}
        <tr>
