Add batch flows UI. Add better network topology shape

--- a/templates/add_flowentry.html
+++ b/templates/add_flowentry.html
@@ -33,6 +33,8 @@
     <input type="text" id="dest_ip" name="dest_ip"><br><br>
     <label for="dest_mask">Destination Mask:</label>
     <input type="text" id="dest_mask" name="dest_mask"><br><br>
+    <label for="action">Output Port / Action:</label>
+    <input type="text" id="action" name="action"><br><br>
     <input type="submit" value="Submit">
   </form>
   
