--- a/templates/add_batchflowentry_status.html
+++ b/templates/add_batchflowentry_status.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Add Batch Flow Entry Status</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <div class="topnav">
@@ -18,11 +19,11 @@
 <body>
 
 <br><br>
-<b>Add Batch Flow Entry Status</b>
+<b class="h2">Add Batch Flow Entry Status</b>
 
 <br><br>
 
-<b>Adding the flow is {{ status }}<b>
+<b class="h2">Adding the flow is {{ status }}</b>
   
 <br><br>
 
