--- a/templates/add_flowentry.html
+++ b/templates/add_flowentry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Add Flow Entry</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <div class="topnav">
@@ -18,24 +19,24 @@
 <body>
   
 <br><br>
-<b>Add Flow Entry</b>
+<b class="h2">Add Flow Entry</b>
 
 <br><br>
 
   <form method="POST" action="{{ url_for('add_flowentry_status') }}">
     <label for="switch_id">Switch ID:</label>
-    <input type="text" id="switch_id" name="switch_id" value="{{ switch_id }}"><br><br>
+    <input type="text" id="switch_id" name="switch_id" value="{{ switch_id }}" class="form-control" style="width: 300px;"><br>
     <label for="cookie">Cookie:</label>
-    <input type="text" id="cookie" name="cookie"><br><br>
+    <input type="text" id="cookie" name="cookie" class="form-control" style="width: 300px;"><br>
     <label for="priority">Priority:</label>
-    <input type="text" id="priority" name="priority"><br><br>
+    <input type="text" id="priority" name="priority" class="form-control" style="width: 300px;"><br>
     <label for="dest_ip">Destination IP:</label>
-    <input type="text" id="dest_ip" name="dest_ip"><br><br>
+    <input type="text" id="dest_ip" name="dest_ip" class="form-control" style="width: 300px;"><br>
     <label for="dest_mask">Destination Mask:</label>
-    <input type="text" id="dest_mask" name="dest_mask"><br><br>
+    <input type="text" id="dest_mask" name="dest_mask" class="form-control" style="width: 300px;"><br>
     <label for="action">Output Port / Action:</label>
-    <input type="text" id="action" name="action"><br><br>
-    <input type="submit" value="Submit">
+    <input type="text" id="action" name="action" class="form-control" style="width: 300px;"><br>
+    <input type="submit" value="Submit" class="btn btn-primary">
   </form>
   
 <br><br>
