--- a/templates/batch_flow_add.html
+++ b/templates/batch_flow_add.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Add Batch Flow Entries</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <div class="topnav">
@@ -18,32 +19,30 @@
 <body>
   
 <br><br>
-<b>Add Batch Flow Entries</b>
+<b class="h2">Add Batch Flow Entries</b>
 <br><br>
-<b>Topology</b>
-<br>
-<form method="POST" action="{{ url_for('topology') }}"></form>
-<input type="reset" value="REFRESH">
-</form>
+<b class="h3">Topology</b>
+<br><br>
+<a href="{{ url_for('batch_flow_add') }}" class="btn btn-primary" >REFRESH</a>
 
 <br>
 <img src="/static/images/{{ topology }}" alt="Topology">
 
 <br><br>
 
-<b>Input Format: s(switch-no):(output-port)->s(switch-no):(output-port)<b>
+<b class="h3">Input Format: s(switch-no):(output-port)->s(switch-no):(output-port)</b>
 <form method="POST" action="{{ url_for('add_batchflowentry_status') }}">
   <label for="path">Path (Switch Path):</label>
-  <input type="text" id="path" name="path" size="100"><br><br>
+  <input type="text" id="path" name="path" size="100" class="form-control" style="width: 600px;"><br>
   <label for="cookie">Cookie:</label>
-  <input type="text" id="cookie" name="cookie"><br><br>
+  <input type="text" id="cookie" name="cookie" class="form-control" style="width: 300px;"><br>
   <label for="priority">Priority:</label>
-  <input type="text" id="priority" name="priority"><br><br>
+  <input type="text" id="priority" name="priority" class="form-control" style="width: 300px;"><br>
   <label for="dest_ip">Destination IP:</label>
-  <input type="text" id="dest_ip" name="dest_ip"><br><br>
+  <input type="text" id="dest_ip" name="dest_ip" class="form-control" style="width: 300px;"><br>
   <label for="dest_mask">Destination Mask:</label>
-  <input type="text" id="dest_mask" name="dest_mask"><br><br>
-  <input type="submit" value="Submit">
+  <input type="text" id="dest_mask" name="dest_mask" class="form-control" style="width: 300px;"><br>
+  <input type="submit" value="Submit" class="btn btn-primary" >
 </form>
 <br><br>
 
