--- a/templates/remove_flowentry.html
+++ b/templates/remove_flowentry.html
@@ -5,6 +5,7 @@
     <title>Remove Flow Entry</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/render_flows.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <div class="topnav">
@@ -19,9 +20,9 @@
 <body>
 
   <br><br>
-<b>Flow Entries of {{switch_id}}</b>
+<b class="h2">Flow Entries of {{switch_id}}</b>
 
-<table style="display: block; height: 450px; overflow: auto;">
+<table style="display: block; height: 400px; overflow: auto;">
     <tr>
         <th style="position: sticky; top: 0; z-index: 1;">Cookie</th>
         <th style="position: sticky; top: 0; z-index: 1;">Priority</th>
@@ -40,23 +41,23 @@
     {%endfor%}
   </table>
 
-  <br><br>
-<b>Remove Flow Entry</b>
+  <br>
+<b class="h2">Remove Flow Entry</b>
 
-<br><br>
+<br>
 
   <form method="POST" action="{{ url_for('remove_flowentry_status') }}">
     <label for="switch_id">Switch ID:</label>
-    <input type="text" id="switch_id" name="switch_id" value="{{ switch_id }}"><br><br>
+    <input type="text" id="switch_id" name="switch_id" value="{{ switch_id }}" class="form-control" style="width: 300px;"><br>
     <label for="cookie">Cookie:</label>
-    <input type="text" id="cookie" name="cookie"><br><br>
+    <input type="text" id="cookie" name="cookie" class="form-control" style="width: 300px;"><br>
     <label for="priority">Priority:</label>
-    <input type="text" id="priority" name="priority"><br><br>
+    <input type="text" id="priority" name="priority" class="form-control" style="width: 300px;"><br>
     <label for="dest_ip">Destination IP:</label>
-    <input type="text" id="dest_ip" name="dest_ip"><br><br>
+    <input type="text" id="dest_ip" name="dest_ip" class="form-control" style="width: 300px;"><br>
     <label for="dest_mask">Destination Mask:</label>
-    <input type="text" id="dest_mask" name="dest_mask"><br><br>
-    <input type="submit" value="Submit">
+    <input type="text" id="dest_mask" name="dest_mask" class="form-control" style="width: 300px;"><br>
+    <input type="submit" value="Submit" class="btn btn-primary">
   </form>
   
 <br><br>
