--- a/templates/render_flows.html
+++ b/templates/render_flows.html
@@ -5,6 +5,7 @@
     <title>View Flow Entries</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/render_flows.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/nav_panel.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <div class="topnav">
@@ -20,8 +21,8 @@
 <body>
 
 <br><br>
-<b>Flow Entries of {{switch_id}}</b>
-
+<b class="h2" >Flow Entries of {{switch_id}}</b>
+<br>
 <table>
     <tr>
         <th>Cookie</th>
