Add drop packets

--- a/templates/add_flowentry.html
+++ b/templates/add_flowentry.html
@@ -34,7 +34,7 @@
     <input type="text" id="dest_ip" name="dest_ip" class="form-control" style="width: 300px;"><br>
     <label for="dest_mask">Destination Mask:</label>
     <input type="text" id="dest_mask" name="dest_mask" class="form-control" style="width: 300px;"><br>
-    <label for="action">Output Port / Action:</label>
+    <label for="action">Output Port / Action (Leave this empty to drop packets):</label>
     <input type="text" id="action" name="action" class="form-control" style="width: 300px;"><br>
     <input type="submit" value="Submit" class="btn btn-primary">
   </form>
