--- a/templates/batch_flow_add.html
+++ b/templates/batch_flow_add.html
@@ -23,7 +23,7 @@
 <br><br>
 <b class="h3">Topology</b>
 <br><br>
-<a href="{{ url_for('batch_flow_add') }}" class="btn btn-primary" >REFRESH</a>
+<a href="{{ url_for('batch_flow_add') }}" class="btn btn-primary" >Refresh</a>
 
 <br>
 <img src="/static/images/{{ topology }}" alt="Topology">
