--- a/templates/topology.html
+++ b/templates/topology.html
@@ -23,7 +23,7 @@
 <b class="h2">Topology</b>
 <br>
 <br>
-<a href="{{ url_for('topology') }}" class="btn btn-primary" >REFRESH</a>
+<a href="{{ url_for('topology') }}" class="btn btn-primary" >Refresh</a>
 <!-- <input type="reset" value="REFRESH"> -->
 <!-- <form method="POST" action="{{ url_for('topology') }}"></form>
 <input type="submit" value="REFRESH">
