Add topology to add flow

--- a/templates/add_flowentry.html
+++ b/templates/add_flowentry.html
@@ -22,6 +22,14 @@
 <b class="h2">Add Flow Entry</b>
 
 <br><br>
+<b class="h3">Topology</b>
+
+<br>
+<img src="/static/images/{{ topology }}" alt="Topology">
+
+<br><br>
+
+<br><br>
 
   <form method="POST" action="{{ url_for('add_flowentry_status') }}">
     <label for="switch_id">Switch ID:</label>
